--- a/portfolio.html
+++ b/portfolio.html
@@ -18,6 +18,15 @@
       background: linear-gradient(to right, #8e0000df, #1e1e1e);
       box-shadow: 0 4px 10px rgba(0, 0, 0, 0.5);
     }
+    .logo {
+  width: 120px;
+  height: 120px;
+  border-radius: 50%;
+  object-fit: cover;
+  border: 4px solid #00aaff;
+  box-shadow: 0 0 12px rgba(0, 170, 255, 0.4);
+  margin-bottom: 20px;
+}
     header h1 {
       font-size: 3.5em;
       margin: 0;
@@ -90,6 +99,7 @@
 </head>
 <body>
   <header>
+     <img src="https://drive.google.com/uc?export=view&id=1Vn2sqlW0sN3D7e9_bKnbQDoKSBpQ-2xz" alt="Sarvesh Logo" class="logo" />
     <h1>Sarvesh Sutar</h1>
     <p>Cinematic Video Editor</p>
   </header>
