--- a/portfolio.html
+++ b/portfolio.html
@@ -19,27 +19,28 @@
       box-shadow: 0 4px 10px rgba(0, 0, 0, 0.5);
     }
     .logo {
-  width: 120px;
-  height: 120px;
+  width: 170px;
+  height: 170px;
   border-radius: 50%;
   object-fit: cover;
-  border: 4px solid #00aaff;
-  box-shadow: 0 0 12px rgba(0, 170, 255, 0.4);
+  border: 4px solid #ff0000;
+  box-shadow: 0 0 12px rgba(255, 255, 255, 0.186);
   margin-bottom: 20px;
-}
+    }
     header h1 {
       font-size: 3.5em;
       margin: 0;
       color: #ffffff;
       text-transform: uppercase;
       letter-spacing: 5px;
-      animation: fadeIn 4s ease-out;
+      animation: fadeIn 2s ease-out;
       
     }
     header p {
       font-size: 1.2em;
       margin-top: 10px;
-      color: #ccc;
+      color: #ffffff;
+      animation: fadeIn 2s ease-out;
       
     }
     section {
@@ -99,7 +100,7 @@
 </head>
 <body>
   <header>
-     <img src="https://drive.google.com/uc?export=view&id=1Vn2sqlW0sN3D7e9_bKnbQDoKSBpQ-2xz" alt="Sarvesh Logo" class="logo" />
+     <img src="sr.jpeg"  class="logo" />
     <h1>Sarvesh Sutar</h1>
     <p>Cinematic Video Editor</p>
   </header>
